# matrix-protos-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: deploy.yml
examples/: led-rainbow.rs  serialize.rs
src/: lib.rs
src/protos/: comm.rs  driver.rs  entity.rs  io.rs  maloseye.rs  mod.rs  recognition.rs  recognition_service.rs  sense.rs  vision.rs  vision_service.rs  zwave_commands.rs
