[package]
name = "matrix-protos-rust"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Rust protobuf bindings for interacting with matrix-io devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.25.1"

[dev-dependencies]
protobuf = "2.25.1"
rand = "0.8.4"
zmq = "0.9"

[build-dependencies]
protobuf-codegen-pure = "2.25.1"
reqwest = "0.11.4"
zip = "0.5.13"